--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <h1>ratna Risky Ramadhani </h1>
     <p> Siswa SMA yang tertarik dengan teknologi dan desin.
 selamat datang di website pertama saya!</p> 
-        <a href=" 
+        <a href="https://www.instagram.com/ratna_"kunjungi instaagram saya</a>
+        <button id="sapaButton">sapa saya!</button>
+      </div>
+        <script src="sricpt.js"></script
+      </body>
+      </html>
+        
+        
 
 
 
